header css finished

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,2 +1,5 @@
 @import url("global.css");
+@import url("body.css");
+@import url("container.css");
+@import url("header.css");
 @import url("utilities.css");
