--- a/styles/global.css
+++ b/styles/global.css
@@ -2,4 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Commissioner", "sans-serif";
+    /* overflow: hidden; */
+}
+
+html {
+    font-size: 62.5%;
 }
