mobile version finished

--- a/styles/body.css
+++ b/styles/body.css
@@ -3,6 +3,6 @@ body {
     justify-content: center;
     align-items: center;
     width: auto;
-    height: 100vh;
-    background-color: #160536;
+    height: 100%;
+    background-color: #0c031f;
 }
