--- a/styles/index.css
+++ b/styles/index.css
@@ -2,4 +2,5 @@
 @import url("body.css");
 @import url("container.css");
 @import url("header.css");
+@import url("main.css");
 @import url("utilities.css");
