--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,4 @@
-img {
+.mobile-image {
     width: 100%;
     height: auto;
     border-top-left-radius: 1rem;
@@ -9,6 +9,7 @@ img {
 h1 {
     margin: 2rem auto 1rem auto;
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .insights {
@@ -19,5 +20,13 @@ h1 {
 @media (min-width: 769px) {
     h1 {
         font-size: 3.5rem;
+    }
+}
+
+/*Laptop Version*/
+@media (min-width: 1025px) {
+    h1 {
+        font-size: 3rem;
+        text-align: left;
     }
 }
