--- a/styles/main.css
+++ b/styles/main.css
@@ -8,12 +8,14 @@ main {
 .paragraph {
     font-weight: 600;
     font-size: 1.3rem;
+    text-align: center;
 }
 
 ul {
     margin: 1rem 0;
     font-size: 1.5rem;
     font-weight: 600;
+    text-align: center;
 }
 
 li {
@@ -40,5 +42,24 @@ li {
 
     .name-list {
         font-size: 1.7rem;
+    }
+}
+
+/*Laptop Version*/
+@media (min-width: 1025px) {
+    ul {
+        display: flex;
+        gap: 3.2rem;
+        font-size: 1.7rem;
+        text-align: left;
+    }
+
+    .paragraph {
+        font-size: 1.5rem;
+        text-align: left;
+    }
+
+    .name-list {
+        font-size: 1.5rem;
     }
 }
