--- a/styles/body.css
+++ b/styles/body.css
@@ -3,6 +3,6 @@ body {
     justify-content: center;
     align-items: center;
     width: auto;
-    min-height: 100vh;
+    height: 100vh;
     background-color: #0c031f;
 }
